--- a/pipelines/include-update-package-version.yml
+++ b/pipelines/include-update-package-version.yml
@@ -4,12 +4,15 @@
 # include-update-package-version
 
 parameters:
-  packageFolder: string
+  - name: packageFolder
+    type: string
+  - name: prerelease
+    type: string
 
 steps:
   - bash: |
       current_version=$(node -p "require('./package.json').version")
-      new_version="${current_version}-$(Build.BuildId)"
+      new_version="${current_version}-$PRERELEASE"
       echo "##vso[task.setvariable variable=package_version]$new_version"
       jq ".version=\"$new_version\"" package.json > package.tmp.json
       mv package.tmp.json package.json
@@ -17,3 +20,5 @@ steps:
       cat package.json
     displayName: "Update Package Version"
     workingDirectory: ${{ parameters.packageFolder }}
+    env:
+      PRERELEASE: ${{ parameters.prerelease }}
