--- a/pipelines/azure-build-package-shell.yml
+++ b/pipelines/azure-build-package-shell.yml
@@ -15,6 +15,9 @@ parameters:
   - name: platforms
     type: object
     default: [win, linux, mac]
+  - name: channel
+    type: string
+    default: ci
 
 variables:
   workingDirectory: ts
@@ -60,7 +63,7 @@ jobs:
       - template: include-update-package-version.yml
         parameters:
           packageFolder: $(shell_folder)
-          prerelease: ci.$(Build.BuildNumber)
+          prerelease: ${{ parameters.channel }}.$(Build.BuildNumber)
 
       - script: |
           pnpm run build:shell
@@ -93,7 +96,7 @@ jobs:
                   displayName: Download shell package - ${{ platform }}
                   patterns: |
                     [Tt]ype[Aa]gent[- ]shell[-_]*
-                    ci*.yml
+                    ${{ parameters.channel }}*.yml
                   condition: succeeded()
 
                 - task: AzureFileCopy@6
