--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "build": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:webpack",
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:webpack:dev",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist deploy",
+    "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
     "tsc:agent": "tsc -p src/agent/tsconfig.json",
@@ -60,8 +61,12 @@
     "@types/jquery": "^3.5.14",
     "@types/jsonpath": "0.2.4",
     "@types/ws": "^8.5.10",
+    "archiver": "^7.0.1",
     "concurrently": "^9.1.2",
     "copy-webpack-plugin": "^12.0.1",
+    "crx": "^5.0.1",
+    "dotenv": "^16.5.0",
+    "find-up": "^7.0.0",
     "rimraf": "^6.0.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
