Update lock file

--- a/ts/examples/chat/package.json
+++ b/ts/examples/chat/package.json
@@ -41,7 +41,7 @@
     "memory-storage": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "7.6.11",
