--- a/ts/examples/searchActionTest/package.json
+++ b/ts/examples/searchActionTest/package.json
@@ -28,7 +28,7 @@
     "interactive-app": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "rimraf": "^6.0.1"
