--- a/ts/packages/agents/chat/package.json
+++ b/ts/packages/agents/chat/package.json
@@ -36,6 +36,6 @@
     "copyfiles": "^2.4.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
