--- a/ts/examples/agentExamples/echo/package.json
+++ b/ts/examples/agentExamples/echo/package.json
@@ -30,6 +30,6 @@
     "copyfiles": "^2.4.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
