--- a/ts/examples/commandHistogram/package.json
+++ b/ts/examples/commandHistogram/package.json
@@ -40,7 +40,7 @@
     "mongodb": "^6.15.0",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
