--- a/ts/examples/docuProc/package.json
+++ b/ts/examples/docuProc/package.json
@@ -36,7 +36,7 @@
     "pdfjs-dist": "^4.10.38",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
