--- a/ts/examples/microdataExtract/package.json
+++ b/ts/examples/microdataExtract/package.json
@@ -52,7 +52,7 @@
     "@types/xml2js": "^0.4.14",
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "engines": {
     "node": ">=20"
