--- a/ts/examples/schemaStudio/package.json
+++ b/ts/examples/schemaStudio/package.json
@@ -28,12 +28,12 @@
     "schema-author": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "engines": {
     "node": ">=20"
