--- a/ts/examples/spelunker/package.json
+++ b/ts/examples/spelunker/package.json
@@ -35,7 +35,7 @@
     "knowledge-processor": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "@types/readline-sync": "^1.4.8",
