--- a/ts/examples/whisperClient/package.json
+++ b/ts/examples/whisperClient/package.json
@@ -33,7 +33,7 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.2",
+    "typescript": "~5.4.5",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.0"
