--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -39,7 +39,7 @@
     "bootstrap": "^5.3.3",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
-    "dompurify": "^3.2.4",
+    "dompurify": "^3.2.5",
     "html-to-text": "^9.0.5",
     "jsonpath": "^1.1.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
@@ -56,7 +56,6 @@
   "devDependencies": {
     "@types/chrome": "^0.0.256",
     "@types/debug": "^4.1.12",
-    "@types/dompurify": "^3.0.5",
     "@types/html-to-text": "^9.0.4",
     "@types/jquery": "^3.5.14",
     "@types/jsonpath": "0.2.4",
@@ -69,7 +68,7 @@
     "find-up": "^7.0.0",
     "rimraf": "^6.0.1",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.2",
+    "typescript": "~5.4.5",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
