--- a/ts/packages/agents/code/package.json
+++ b/ts/packages/agents/code/package.json
@@ -31,6 +31,6 @@
     "@types/ws": "^8.5.10",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
