--- a/ts/packages/agents/image/package.json
+++ b/ts/packages/agents/image/package.json
@@ -31,6 +31,6 @@
   "devDependencies": {
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
