--- a/ts/packages/agents/montage/package.json
+++ b/ts/packages/agents/montage/package.json
@@ -56,7 +56,7 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.2",
+    "typescript": "~5.4.5",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.0"
