--- a/ts/packages/agents/spelunker/package.json
+++ b/ts/packages/agents/spelunker/package.json
@@ -32,13 +32,13 @@
     "dotenv": "^16.3.1",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "7.6.11",
     "copyfiles": "^2.4.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
