--- a/ts/packages/aiclient/package.json
+++ b/ts/packages/aiclient/package.json
@@ -42,7 +42,7 @@
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "engines": {
     "node": ">=20"
