--- a/ts/packages/commonUtils/package.json
+++ b/ts/packages/commonUtils/package.json
@@ -29,7 +29,7 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
-    "@azure-rest/maps-search": "^2.0.0-beta.2",
+    "@azure-rest/maps-search": "^2.0.0-beta.3",
     "@typeagent/agent-sdk": "workspace:*",
     "aiclient": "workspace:*",
     "chalk": "^5.4.1",
@@ -50,6 +50,6 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
