--- a/ts/packages/knowledgeProcessor/package.json
+++ b/ts/packages/knowledgeProcessor/package.json
@@ -27,7 +27,7 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
-    "@azure-rest/maps-search": "^2.0.0-beta.2",
+    "@azure-rest/maps-search": "^2.0.0-beta.3",
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
@@ -44,6 +44,6 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
