--- a/ts/packages/memory/image/package.json
+++ b/ts/packages/memory/image/package.json
@@ -24,7 +24,7 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
-    "@azure-rest/maps-search": "^2.0.0-beta.2",
+    "@azure-rest/maps-search": "^2.0.0-beta.3",
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
@@ -41,6 +41,6 @@
     "dotenv": "^16.3.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
