--- a/ts/packages/memory/storage/package.json
+++ b/ts/packages/memory/storage/package.json
@@ -42,6 +42,6 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "test-lib": "workspace:*",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   }
 }
