--- a/ts/packages/schemaAuthor/package.json
+++ b/ts/packages/schemaAuthor/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "engines": {
     "node": ">=20"
