--- a/ts/packages/typeagent/package.json
+++ b/ts/packages/typeagent/package.json
@@ -36,7 +36,7 @@
     "debug": "^4.4.0",
     "dotenv": "^16.3.1",
     "typechat": "^0.1.1",
-    "typescript": "^5.4.2"
+    "typescript": "~5.4.5"
   },
   "devDependencies": {
     "@types/async": "^3.2.24",
