add pipeline condition

--- a/.github/workflows/build-package-shell.yml
+++ b/.github/workflows/build-package-shell.yml
@@ -18,6 +18,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  pull-requests: read
+  contents: read
+
 jobs:
   build_package_shell:
     strategy:
@@ -74,8 +78,3 @@ jobs:
           elif [[ $RUNNER_OS == 'macOS' ]]; then
             pnpm run shell:package:mac
           fi
-      - uses: actions/upload-artifact@v4
-        if: ${{ github.event_name != 'pull_request' && github.event_name != 'merge_group' }}
-        with:
-          name: typeagent-shell-package-${{ github.run_id }}-${{ matrix.os }}
-          path: ts/packages/shell/dist
