--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -22,7 +22,7 @@
     "build:electron:esm": "electron-vite build",
     "clean": "rimraf --glob out dist deploy *.tsbuildinfo *.done.build.log",
     "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --config.node-linker=hoisted --legacy",
-    "dev": "npm run prepare-vite && electron-vite dev",
+    "dev": "npm run prepare-vite && electron-vite dev -- --env ../../.env",
     "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
     "package:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js -p never",
     "package:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js -p never",
@@ -32,7 +32,7 @@
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
     "shell:smoke": "npx playwright test simple.spec.ts",
     "shell:test": "npx playwright test",
-    "start": "npm run prepare-vite && electron-vite preview",
+    "start": "npm run prepare-vite && electron-vite preview -- --env ../../.env",
     "start:linux": "./dist/linux-unpacked/typeagent-shell",
     "start:mac": "open ./dist/mac-arm64/TypeAgent\\ Shell.app",
     "start:win": ".\\dist\\win-unpacked\\typeagent-shell.exe",
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@azure/identity": "^4.2.1",
+    "@azure/msal-node-extensions": "^1.5.0",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@fontsource/lato": "^5.2.5",
