--- a/ts/packages/planVisualizer/package.json
+++ b/ts/packages/planVisualizer/package.json
@@ -1,7 +1,15 @@
 {
   "name": "web-plan-visualizer",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A dynamic web plan visualizer using Cytoscape.js",
+  "homepage": "https://github.com/microsoft/TypeAgent#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/TypeAgent.git",
+    "directory": "ts/packages/planVisualizer"
+  },
+  "license": "MIT",
+  "author": "Microsoft",
   "type": "module",
   "main": "dist/server.js",
   "scripts": {
@@ -39,7 +47,5 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  },
-  "author": "",
-  "license": "MIT"
+  }
 }
