--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -19,7 +19,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:webpack",
+    "build2": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite",
     "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:webpack:dev",
+    "build:dev2": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev",
     "clean": "rimraf dist deploy",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
@@ -27,6 +29,8 @@
     "tsc:agent": "tsc -p src/agent/tsconfig.json",
     "tsc:common": "tsc -p src/common/tsconfig.json",
     "tsc:puppeteer": "tsc -p src/puppeteer/tsconfig.json",
+    "vite": "vite build --mode production",
+    "vite:dev": "vite build --mode development",
     "webpack": "webpack --config webpack.prod.js",
     "webpack:dev": "webpack --config webpack.dev.js"
   },
@@ -54,11 +58,16 @@
     "ws": "^8.17.1"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.18",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/chrome": "^0.0.256",
     "@types/debug": "^4.1.12",
     "@types/html-to-text": "^9.0.4",
     "@types/jquery": "^3.5.14",
     "@types/jsonpath": "0.2.4",
+    "@types/node": "^20.10.4",
+    "@types/prismjs": "^1.26.3",
     "@types/ws": "^8.5.10",
     "archiver": "^7.0.1",
     "concurrently": "^9.1.2",
@@ -66,9 +75,19 @@
     "crx": "^5.0.1",
     "dotenv": "^16.5.0",
     "find-up": "^7.0.0",
+    "fs-extra": "^11.2.0",
     "rimraf": "^6.0.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "terser": "^5.24.0",
     "ts-loader": "^9.5.1",
+    "tslib": "^2.6.2",
     "typescript": "~5.4.5",
+    "vite": "^5.4.19",
+    "vite-plugin-chrome-extension": "^0.0.7",
+    "vite-plugin-node-polyfills": "^0.17.0",
+    "vite-plugin-static-copy": "^0.15.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-merge": "^5.10.0"
