--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -74,6 +74,7 @@
     "fs-extra": "^11.2.0",
     "rimraf": "^6.0.1",
     "rollup-plugin-copy": "^3.5.0",
+    "ts-loader": "^9.5.1",
     "typescript": "~5.4.5",
     "vite": "^5.4.19"
   }
