--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -18,8 +18,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:webpack",
-    "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:webpack:dev",
+    "build": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite",
+    "build:dev": "npm run tsc:common && concurrently npm:tsc:agent npm:tsc:puppeteer npm:vite:dev",
     "clean": "rimraf dist deploy",
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
@@ -27,8 +27,8 @@
     "tsc:agent": "tsc -p src/agent/tsconfig.json",
     "tsc:common": "tsc -p src/common/tsconfig.json",
     "tsc:puppeteer": "tsc -p src/puppeteer/tsconfig.json",
-    "webpack": "webpack --config webpack.prod.js",
-    "webpack:dev": "webpack --config webpack.dev.js"
+    "vite": "node scripts/buildExtension.mjs",
+    "vite:dev": "node scripts/buildExtension.mjs --dev"
   },
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
@@ -37,6 +37,7 @@
     "agent-rpc": "workspace:*",
     "aiclient": "workspace:*",
     "bootstrap": "^5.3.3",
+    "chalk": "^5.4.1",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
     "dompurify": "^3.2.5",
@@ -54,23 +55,27 @@
     "ws": "^8.17.1"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.18",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/chrome": "^0.0.256",
     "@types/debug": "^4.1.12",
     "@types/html-to-text": "^9.0.4",
     "@types/jquery": "^3.5.14",
     "@types/jsonpath": "0.2.4",
+    "@types/node": "^20.10.4",
+    "@types/prismjs": "^1.26.3",
     "@types/ws": "^8.5.10",
     "archiver": "^7.0.1",
     "concurrently": "^9.1.2",
-    "copy-webpack-plugin": "^12.0.1",
     "crx": "^5.0.1",
     "dotenv": "^16.5.0",
     "find-up": "^7.0.0",
+    "fs-extra": "^11.2.0",
     "rimraf": "^6.0.1",
+    "rollup-plugin-copy": "^3.5.0",
     "ts-loader": "^9.5.1",
     "typescript": "~5.4.5",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0"
+    "vite": "^5.4.19"
   }
 }
