--- a/.github/workflows/build-package-shell.yml
+++ b/.github/workflows/build-package-shell.yml
@@ -22,6 +22,10 @@ permissions:
   pull-requests: read
   contents: read
 
+env:
+  ELECTRON_CACHE: ${{ github.workspace }}/.cache/electron
+  ELECTRON_BUILDER_CACHE: ${{ github.workspace }}/.cache/electron-builder
+
 jobs:
   build_package_shell:
     strategy:
@@ -44,7 +48,7 @@ jobs:
           filters: |
             ts:
               - "ts/**"
-              - ".github/workflows/build-ts.yml"
+              - ".github/workflows/build-package-shell.yml"
       - uses: pnpm/action-setup@v4
         if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.ts != 'false' }}
         name: Install pnpm
@@ -66,6 +70,16 @@ jobs:
         working-directory: ts
         run: |
           pnpm run build:shell
+      - name: Electron Builder Cache
+        if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.ts != 'false' }}
+        uses: actions/cache@v4
+        with:
+          key: electron | ${{ runner.os }} | ${{ runner.arch }} | ${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: |
+            ${{ env.ELECTRON_BUILDER_CACHE }}
+            ${{ env.ELECTRON_CACHE }}
+          restore-keys: |
+            electron | ${{ runner.os }} | ${{ runner.arch }}
       - name: Package - shell
         if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.ts != 'false' }}
         working-directory: ts
