--- a/pipelines/azure-build-package-shell.yml
+++ b/pipelines/azure-build-package-shell.yml
@@ -12,21 +12,29 @@ pr:
       - "*"
 
 parameters:
-  - name: platforms
-    type: object
-    default: [win, linux, mac]
   - name: channel
     type: string
-    default: ci
+    default: test
     values:
-      - ci
-      - lkg
       - test
+      - lkg
 
 variables:
-  workingDirectory: ts
-  shell_folder: ts/packages/shell
-  nodeVersion: 22
+  - name: workingDirectory
+    value: ts
+  - name: shell_folder
+    value: ts/packages/shell
+  - name: nodeVersion
+    value: 22
+  - name: ELECTRON_BUILDER_CACHE
+    value: $(Pipeline.Workspace)/electron-builder-cache
+  - name: channel
+    ${{ if eq(variables['Build.Reason'], 'Manual') }}:
+      value: ${{ parameters.channel }}
+    ${{ if ne(variables['Build.Reason'], 'Manual') }}:
+      value: ci
+  - name: platform
+    value: windows,linux,mac
 
 jobs:
   - job: build_package_shell
@@ -49,6 +57,18 @@ jobs:
         displayName: Checkout TypeAgent Repository
         path: "typeagent"
 
+      - bash: |
+          echo "registry=$(REGISTRY)" > .npmrc
+          echo "always-auth=true" >> .npmrc
+          cat .npmrc
+        displayName: Set npm registry
+        workingDirectory: $(Build.SourcesDirectory)/ts
+
+      - task: npmAuthenticate@0
+        displayName: Authenticate to npm registry
+        inputs:
+          workingFile: $(Build.SourcesDirectory)/ts/.npmrc
+
       - task: UseNode@1
         displayName: Setup Node.js
         inputs:
@@ -67,7 +87,7 @@ jobs:
       - template: include-update-package-version.yml
         parameters:
           packageFolder: $(shell_folder)
-          prerelease: ${{ parameters.channel }}.$(Build.BuildNumber)
+          prerelease: $(channel).$(Build.BuildNumber)
 
       - script: |
           pnpm run build:shell
@@ -85,7 +105,7 @@ jobs:
 
   - deployment: publish
     displayName: Publish TypeAgent Shell
-    environment: typeagent-shell-${{ parameters.channel }}
+    environment: typeagent-shell-$(channel)
     dependsOn: build_package_shell
     pool:
       # AzureFileCopy requires windows
@@ -94,14 +114,14 @@ jobs:
       runOnce:
         deploy:
           steps:
-            - ${{ each platform in parameters.platforms }}:
+            - ${{ each platform in split(variables.platform, ',') }}:
                 - download: current
                   artifact: shell-${{ platform }}
                   displayName: Download shell package - ${{ platform }}
                   patterns: |
                     TypeAgent Shell[-_]*
                     typeagentshell-*
-                    ${{ parameters.channel }}*.yml
+                    $(channel)*.yml
                   condition: succeeded()
 
                 - task: AzureFileCopy@6
