build both x64 and arm64 for macOS

--- a/.gitignore
+++ b/.gitignore
@@ -439,3 +439,6 @@ FodyWeavers.xsd
 # Python virtual env
 .venv
 android/samples/mobile/.idea/deploymentTargetSelector.xml
+
+# Mac OS files
+.DS_Store
