--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -24,9 +24,15 @@
     "deploy": "rimraf ./deploy && pnpm deploy --filter=agent-shell --prod ./deploy --config.node-linker=hoisted --legacy",
     "dev": "npm run prepare-vite && electron-vite dev -- --env ../../.env",
     "dev:noenv": "npm run prepare-vite && electron-vite dev",
-    "postinstall": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
+    "postinstall": "run-script-os",
+    "postinstall:default": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
+    "postinstall:macos": "cross-env \"npm_execpath=\" electron-builder install-app-deps --arch $ARCH",
+    "package": "run-script-os",
     "package:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js -p never",
-    "package:mac": "npm run deploy && electron-builder --mac --config electron-builder.config.js -p never",
+    "package:macos": "npm run package:macos:arm64",
+    "package:macos:x64": "ARCH=x64 pnpm run package:macos:common",
+    "package:macos:arm64": "ARCH=arm64 pnpm run package:macos:common",
+    "package:macos:common": "npm run deploy && electron-builder --mac --config electron-builder.config.js -p never --$ARCH",
     "package:win": "npm run deploy && electron-builder --win --config electron-builder.config.js -p never",
     "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
@@ -75,6 +81,7 @@
     "electron-vite": "^3.1.0",
     "less": "^4.2.0",
     "rimraf": "^6.0.1",
+    "run-script-os": "^1.1.6",
     "type-fest": "^4.39.1",
     "typescript": "~5.4.5",
     "vite": "^6.2.7"
