--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -26,11 +26,12 @@
     "dev:noenv": "npm run prepare-vite && electron-vite dev",
     "postinstall": "run-script-os",
     "package": "run-script-os",
-    "package:linux": "npm run deploy && electron-builder --linux --config electron-builder.config.js -p never",
-    "package:macos": "npm run package:macos:arm64",
-    "package:macos:arm64": "ARCH=arm64 pnpm run package:macos:common",
-    "package:macos:common": "npm run deploy && electron-builder --mac --config electron-builder.config.js -p never --$ARCH",
-    "package:win": "npm run deploy && electron-builder --win --config electron-builder.config.js -p never",
+    "package:linux": "PLATFORM=linux ARCH=x64 pnpm run package:common",
+    "package:macos": "pnpm run package:macos:arm64",
+    "package:macos:x64": "PLATFORM=mac ARCH=arm64 pnpm run package:common",
+    "package:macos:arm64": "PLATFORM=mac ARCH=arm64 pnpm run package:common",
+    "package:common": "pnpm run deploy && electron-builder --$PLATFORM --config electron-builder.config.js -p never --$ARCH",
+    "package:win32": "PLATFORM=win ARCH=x64 pnpm run package:common",
     "postinstall:default": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
     "postinstall:macos": "cross-env \"npm_execpath=\" electron-builder install-app-deps --arch $ARCH",
     "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
