--- a/ts/package.json
+++ b/ts/package.json
@@ -37,9 +37,7 @@
     "regen": "pnpm -C packages/cli run regen",
     "regen:builtin": "pnpm -C packages/cli run regen:builtin",
     "shell": "pnpm -C packages/shell run dev",
-    "shell:package:linux": "pnpm -C packages/shell run package:linux",
-    "shell:package:mac": "pnpm -C packages/shell run package:mac",
-    "shell:package:win": "pnpm -C packages/shell run package:win",
+    "shell:package": "pnpm -C packages/shell run package",
     "shell:start:linux": "pnpm -C packages/shell run start:linux",
     "shell:start:mac": "pnpm -C packages/shell run start:mac",
     "shell:start:win": "pnpm -C packages/shell run start:win",
