--- a/pipelines/azure-build-package-shell.yml
+++ b/pipelines/azure-build-package-shell.yml
@@ -97,6 +97,14 @@ jobs:
           pnpm run build:shell
         displayName: Build Shell
         workingDirectory: $(workingDirectory)
+        env:
+          ELECTRON_BUILDER_CHANNEL: $(channel)
+
+      # For backward compat, can be remove in the future
+      - ${{ if eq(variables['Agent.OS'], 'Windows_NT') }}:
+          - script: |
+              copy $(shell_folder)/dist/$(channel)-x64.xml $(shell_folder)/dist/$(channel).yml
+            displayName: Copy windows x64 to default channel file
 
       - task: Cache@2
         displayName: Cache Electron Builder
