--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -26,14 +26,14 @@
     "dev:noenv": "npm run prepare-vite && electron-vite dev",
     "postinstall": "run-script-os",
     "package": "run-script-os",
-    "package:linux": "PLATFORM=linux ARCH=x64 pnpm run package:common",
-    "package:macos": "pnpm run package:macos:arm64",
-    "package:macos:x64": "PLATFORM=mac ARCH=arm64 pnpm run package:common",
-    "package:macos:arm64": "PLATFORM=mac ARCH=arm64 pnpm run package:common",
-    "package:common": "pnpm run deploy && electron-builder --$PLATFORM --config electron-builder.config.js -p never --$ARCH",
-    "package:win32": "PLATFORM=win ARCH=x64 pnpm run package:common",
-    "postinstall:default": "cross-env \"npm_execpath=\" electron-builder install-app-deps",
-    "postinstall:macos": "cross-env \"npm_execpath=\" electron-builder install-app-deps --arch $ARCH",
+    "package:default": "pnpm run deploy && electron-builder --config electron-builder.config.js -p never",
+    "package:linux": "ELECTRON_BUILDER_ARCH=x64 pnpm run package:default --linux --x64",
+    "package:macos": "pnpm run package:macos:x64 && pnpm run package:macos:arm64",
+    "package:macos:x64": "ELECTRON_BUILDER_ARCH=x64 pnpm run package:default --mac --x64",
+    "package:macos:arm64": "ELECTRON_BUILDER_ARCH=arm64 pnpm run package:default --mac --arm64",
+    "package:win32": "set ELECTRON_BUILDER_ARCH=x64 && pnpm run package:default --win --x64",
+    "postinstall:default": "[[ -v $ELECTRON_BUILDER_ARCH ]] && electron-builder install-app-deps --arch $ELECTRON_BUILDER_ARCH || electron-builder install-app-deps",
+    "postinstall:win32": "IF \"%ELECTRON_BUILDER_ARCH%\" == \"\" ( electron-builder install-app-deps ) ELSE ( electron-builder install-app-deps --arch %ELECTRON_BUILDER_ARCH%)",
     "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
