--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -32,7 +32,7 @@
     "package:macos:x64": "ELECTRON_BUILDER_ARCH=x64 pnpm run package:default --mac --x64",
     "package:macos:arm64": "ELECTRON_BUILDER_ARCH=arm64 pnpm run package:default --mac --arm64",
     "package:win32": "set ELECTRON_BUILDER_ARCH=x64 && pnpm run package:default --win --x64",
-    "postinstall:default": "[[ -v $ELECTRON_BUILDER_ARCH ]] && electron-builder install-app-deps --arch $ELECTRON_BUILDER_ARCH || electron-builder install-app-deps",
+    "postinstall:default": "[[ -n \"$ELECTRON_BUILDER_ARCH\" ]] && electron-builder install-app-deps --arch $ELECTRON_BUILDER_ARCH || electron-builder install-app-deps",
     "postinstall:win32": "IF \"%ELECTRON_BUILDER_ARCH%\" == \"\" ( electron-builder install-app-deps ) ELSE ( electron-builder install-app-deps --arch %ELECTRON_BUILDER_ARCH%)",
     "prepare-vite": "concurrently npm:typecheck npm:build:electron:cjs",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
