Shell enable install build macOS with x64 and arm64  (#1050)

--- a/pipelines/azure-build-package-shell.yml
+++ b/pipelines/azure-build-package-shell.yml
@@ -106,12 +106,21 @@ jobs:
           restoreKeys: |
             electron | $(Agent.OS) | $(Agent.OSArchitecture)
 
-      - bash: |
-          echo $ELECTRON_BUILDER_CACHE
-          echo $ELECTRON_CACHE
-          pnpm run shell:package:$(platform)
+      - script: |
+          pnpm run shell:package
         displayName: Package - shell
         workingDirectory: $(workingDirectory)
+        env:
+          ELECTRON_BUILDER_CHANNEL: $(channel)
+
+      # For backward compat, can be remove in the future
+      - script: |
+          copy %ELECTRON_BUILDER_CHANNEL%-x64.yml %ELECTRON_BUILDER_CHANNEL%.yml
+        displayName: Copy windows x64 to default channel file
+        condition: eq(variables['Agent.OS'], 'Windows_NT')
+        workingDirectory: $(shell_folder)/dist
+        env:
+          ELECTRON_BUILDER_CHANNEL: $(channel)
 
       - publish: $(shell_folder)/dist
         displayName: Upload Artifact
