--- a/ts/package.json
+++ b/ts/package.json
@@ -36,7 +36,7 @@
     "rebuild": "fluid-build . -t build --rebuild",
     "regen": "pnpm -C packages/cli run regen",
     "regen:builtin": "pnpm -C packages/cli run regen:builtin",
-    "shell": "pnpm -C packages/shell run dev",
+    "shell": "pnpm -C packages/shell run start",
     "shell:package": "pnpm -C packages/shell run package",
     "shell:start:linux": "pnpm -C packages/shell run start:linux",
     "shell:start:mac": "pnpm -C packages/shell run start:mac",
