--- a/pipelines/include-update-package-version.yml
+++ b/pipelines/include-update-package-version.yml
@@ -12,7 +12,7 @@ parameters:
 steps:
   - bash: |
       current_version=$(node -p "require('./package.json').version")
-      new_version="${current_version}-$PRERELEASE"
+      new_version="${current_version}-${{ parameters.prerelease }}"
       echo "##vso[task.setvariable variable=package_version]$new_version"
       jq ".version=\"$new_version\"" package.json > package.tmp.json
       mv package.tmp.json package.json
@@ -20,5 +20,3 @@ steps:
       cat package.json
     displayName: "Update Package Version"
     workingDirectory: ${{ parameters.packageFolder }}
-    env:
-      PRERELEASE: ${{ parameters.prerelease }}
